Changes in 0.5.3:

 * Improvements to mapptr to make it work better for network IO. 
 
 * Debug trace code is compiled in unless turned off in ./configure
   (although most programs will not write it out unless asked.)

 * Add libhsyncinfo program to show compiled-in settings and version.

 * Add test cases that run across localhost TCP sockets.

 * Improved build code; should now build easily from CVS through
   autogen.sh.

 * Improved trace code.

Changes in 0.5.2:

 * Use mapptr for input. 

 * Implement a new structure for encoding in nad.c.  It doesn't 
   encode at the moment, but it's much more maintainable.

 * More regression cases.

 * Clean up build process.

Changes in 0.5.0:

 * Rewrite hs_inbuf and hs_encode to make them simpler and more
   reliable. 

 * Test cases for input handling.

 * Use the map_ptr idea for input from both streams and files.

Changes in 0.4.1:

 * automake/autoconf now works cleanly when the build directory is
   different to the source directory.

 * --enable-ccmalloc works again.

Changes in 0.4.0:

* A much better regression suite.

* CHECKSUM token includes the file's checksum up to the current
  location, to aid in self-testing.

* Various bug fixes, particularly to do with short IO returns.


Local variables:
mode: indented-text
End: