@@ -1,12 +1,13 @@
 #! /bin/sh -pe
 
+# $Id$
+# Copyright (C) 2000 by Martin Pool
+
 # Regression test binary command encoding by spitting lots of 
 # stuff from ascii to binary and back.
 
 # We expect the automake-generated Makefile to pass in $srcdir, but if we're
 # run from the commandline we may not have it.
-
-source ${srcdir:=.}/testfns.sh $0 $@
 
 out=$tmpdir/out.tmp
 cmds=$testdir/cmds
