@@ -1,12 +1,13 @@
 #! /bin/sh -pe
 
+# $Id$
+# Copyright (C) 2000 by Martin Pool
+
 # Regression test encoding and decoding by playing a suite of prerecorded
 # differences
 
 # We expect the automake-generated Makefile to pass in $srcdir, but if we're
 # run from the commandline we may not have it.
-
-source ${srcdir:-.}/testfns.sh $0 $@
 
 newsig=$tmpdir/newsig.tmp
 out=$tmpdir/out.tmp
