@@ -14,6 +14,12 @@ Changes in 0.5.3:
 
  * Improved trace code.
 
+ * Clean up to build on sparc-sun-solaris2.8, and in the process clean
+   up the handling of bytes vs chars, and of building without gcc
+
+ * Reverse build scripts so that driver.sh calls the particular
+   script.
+
 Changes in 0.5.2:
 
  * Use mapptr for input. 
